--- a/TMS.Application/TMS.Application.csproj
+++ b/TMS.Application/TMS.Application.csproj
@@ -9,12 +9,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Employees\Queries\" />
+    <Folder Include="Employees\Queries\GetEmployeeList\" />
     <Folder Include="Issues\Queries\" />
     <Folder Include="Roles\Queries\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="FluentValidation" Version="8.6.1" />
     <PackageReference Include="MediatR" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.1" />
