--- a/TMS.Infrastructure/TMS.Infrastructure.csproj
+++ b/TMS.Infrastructure/TMS.Infrastructure.csproj
@@ -12,4 +12,10 @@
     <Folder Include="Services\Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.ApiAuthorization.IdentityServer" Version="3.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
+  </ItemGroup>
+
 </Project>
