--- a/TMS.WebUI/TMS.WebUI.csproj
+++ b/TMS.WebUI/TMS.WebUI.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Styles\main.scss" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Styles\main.scss" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
   </ItemGroup>
