Reference to common layer

--- a/TMS.Application/TMS.Application.csproj
+++ b/TMS.Application/TMS.Application.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TMS.Common\TMS.Common.csproj" />
     <ProjectReference Include="..\TMS.Domain\TMS.Domain.csproj" />
   </ItemGroup>
 
