--- a/TMS.Domain/TMS.Domain.csproj
+++ b/TMS.Domain/TMS.Domain.csproj
@@ -9,4 +9,8 @@
     <Folder Include="ValueObjects\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TMS.Common\TMS.Common.csproj" />
+  </ItemGroup>
+
 </Project>
