--- a/TMS.Domain/TMS_1.Domain.csproj
+++ b/TMS.Domain/TMS_1.Domain.csproj
@@ -2,10 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>TMS.Domain</RootNamespace>
+    <AssemblyName>TMS.Domain</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TMS.Common\TMS.Common.csproj" />
+    <ProjectReference Include="..\TMS.Common\TMS_0.Common.csproj" />
   </ItemGroup>
 
 </Project>
